Fix dark mode

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -39,7 +39,7 @@ nav > a {
 }
 
 nav > a:hover > .line {
-    background-color: green;
+    background-color: #FFA726;
     animation: appear 0.3s linear forwards;
 }
 
@@ -54,3 +54,8 @@ nav > a:hover > .line {
     }
 }
 
+.home {
+    background-color: transparent !important;
+    border: 0;
+    color: white;
+}
