--- a/src/app/pages/callback/callback.scss
+++ b/src/app/pages/callback/callback.scss
@@ -1,24 +1,24 @@
 @media (prefers-color-scheme: dark){
     .main-container {
-        background: #FFA726;
-        color: black;
-        background: linear-gradient(180deg, rgba(255, 167, 38, 1) 0%, rgba(0, 0, 0, 1) 71%);
+        background: #FFA726 !important;
+        color: black !important;
+        background: linear-gradient(180deg, rgba(255, 167, 38, 1) 0%, rgba(0, 0, 0, 1) 71%) !important;
     }
 
     .user {
-        background-color: hsl(0, 0%, 10%);
-        color: white;
+        background-color: hsl(0, 0%, 10%) !important;
+        color: white !important;
 
         & a {
-            color: hsl(0, 0%, 70%);
+            color: hsl(0, 0%, 70%) !important;
         }
         & p {
-            color: hsl(0, 0%, 90%);
+            color: hsl(0, 0%, 90%) !important;
         }
     }
 
     #share {
-        background-color: hsl(0, 0%, 50%) ;
+        background-color: hsl(0, 0%, 50%) !important;
         color: white;
     }
 
@@ -27,17 +27,17 @@
     }
 
     .tag {
-        background-color: hsl(0, 0%, 20%);
-        color: hsl(36, 100%, 57%);
+        background-color: hsl(0, 0%, 20%) !important;
+        color: hsl(36, 100%, 57%) !important;
 
         &:hover {
-            background: hsl(0, 0%, 30%);
+            background: hsl(0, 0%, 30%) !important;
         }
     }
 
     .top {
-        background-color: var(--dark-bg-dark);
-        color: #ffa726;
+        background-color: var(--dark-bg-dark) !important;
+        color: #ffa726 !important;
     }
 
     ::ng-deep .mat-mdc-text-field-wrapper.mdc-text-field.mdc-text-field--filled {
